--- a/src/components/layout/header/header.module.css
+++ b/src/components/layout/header/header.module.css
@@ -2,6 +2,7 @@
     height: 4.4rem;
     overflow: hidden;
     position: fixed;
+    left: 0;
     z-index: 5;
     width: 100dvw;
     border-bottom: 1px solid transparent;
