--- a/src/app/sections/homeSection/home.module.css
+++ b/src/app/sections/homeSection/home.module.css
@@ -1,7 +1,7 @@
 .sectionContainer{
     height: 100dvh;
     width: 100%;
-    padding: 0rem;
+    padding-top: 48px;
     display: flex;
     align-items: center;
     justify-content: center;
